# crime_linkage_model_comparison

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: run_comparison.py
examples/output/results/: mcnemar_test.txt  metrics.txt
src/linkage_compare/: __init__.py  __main__.py  compare.py  models.py  simulate.py  stats.py
tests/: test_compare.py  test_models.py  test_simulate.py  test_stats.py
